improved menu and layout

--- a/app/ui-angular/ui-angular.html
+++ b/app/ui-angular/ui-angular.html
@@ -1,9 +1,4 @@
-<div class="ui segment" ui-sticky-context="vm.stickyContext">
-  <div class="right ui rail">
-    <div class="ui sticky" ui-sticky ui-sticky-data="vm.stickyData" ui-sticky-context-id="vm.stickyContext" ng-include="vm.menuUrl">
-
-    </div>
-  </div>
-
-  <ui-readme> </ui-readme>
+<div ng-include="vm.menuUrl">
 </div>
+
+<ui-readme> </ui-readme>
