--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <div class="ui inverted blue main menu" ui-visibility ui-visibility-data="vm.menuVisibility">
     <!--<div class="ui inverted blue main menu">-->
     <div class="ui text container">
+      <div href="#/" class="item">
+        <i class="sidebar icon"></i>
+      </div>
       <!--<div href="#" class="header item">
         Paul Dhillon
       </div>-->
@@ -37,8 +40,23 @@
       <!--<a href="#/ps-uninstall" class="item" ng-class="{active:vm.isActive('/ui-angular')}">Uninstall</a>-->
     </div>
   </div>
-
-  <div class="ui text container" ng-view>
+  <!--<div class="ui sidebar inverted vertical menu">
+    <a class="item">
+      1
+    </a>
+    <a class="item">
+      2
+    </a>
+    <a class="item">
+      3
+    </a>
+  </div>
+  <div class="pusher">-->
+  <!-- Site content !-->
+  </div>
+  
+  <div class="ui text container segment" ng-view>
+    
   </div>
 
   <div class="ui inverted vertical footer segment">
