--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <div class="ui inverted blue main menu" ui-visibility ui-visibility-data="vm.menuVisibility">
     <!--<div class="ui inverted blue main menu">-->
     <div class="ui text container">
-      <div href="#/" class="item">
+      <!--<div href="#/" class="item">
         <i class="sidebar icon"></i>
-      </div>
+      </div>-->
       <!--<div href="#" class="header item">
         Paul Dhillon
       </div>-->
