mobile sidebar working

--- a/app/shared/submenu.html
+++ b/app/shared/submenu.html
@@ -2,7 +2,7 @@
   <div class="ui sticky" ui-sticky ui-sticky-data="vm.stickyData" >
     <div class="ui vertical menu ">
 
-      <div class="item" ng-repeat="header in vm.menu">
+      <div class="item" ng-repeat="header in vm.subMenu">
         <a class="header" ng-href="{{vm.url+'#'+header.anchor}}">{{header.title}}</a>
         <div class="menu">
 
