--- a/app/ui-angular/ui-angular-readme.html
+++ b/app/ui-angular/ui-angular-readme.html
@@ -1,5 +1,5 @@
 <p align="center">
-  <img src="img/ui-angular.png" alt="UI Angular"/><br/>
+  <img src="img/ui-angular.png" alt="UI Angular"  style="max-width: 80%"/><br/>
 </p>
 
 <div class="anchor" id="ui-angular"></div>
