--- a/index.html
+++ b/index.html
@@ -24,32 +24,41 @@
 
 <body ng-app="app" pd-index class="pushable">
   <div class="ui blue inverted vertical sidebar menu" ui-sidebar ui-sidebar-event-id="vm.sideBarEvent">
-    <a class="item">
-      1
+    <div class="header item">
+      <i class="ui caret down icon"></i>
+      Main Pages
+    </div>
+    <a class="item" ng-repeat="item in vm.menu" ng-href="#/{{item.url}}" ng-class="{active:vm.isActive('/{{item.url}}')}" ng-bind="item.menu">
     </a>
-    <a class="item">
-      2
-    </a>
-    <a class="item">
-      3
-    </a>
+    <div class="header item">
+      <i class="ui caret down icon"></i>
+      Page Navigation
+    </div>
+    <div class="item" ng-repeat="header in vm.subMenu">
+      <a class="header" ng-href="{{vm.url+'#'+header.anchor}}">{{header.title}}</a>
+      <div class="menu">
+
+        <a class="item" ng-href="{{vm.url+'#'+item.anchor}}" ng-repeat="item in header.children">{{item.title}}</a>
+
+      </div>
+    </div>
   </div>
   <div class="pusher">
-    <div class="ui inverted blue main menu" ui-visibility ui-visibility-data="vm.menuVisibility">
-      <div href="#/" class="item sidebarBtn" ui-sidebar-event="vm.sideBarEvent">
+    <div class="ui inverted blue main menu mobile show" ui-visibility ui-visibility-data="vm.menuVisibility">
+      <a class="item sidebarBtn" ui-sidebar-event="vm.sideBarEvent">
         <i class="sidebar icon"></i>
-      </div>
+      </a>
     </div>
 
     <img class="top image" src="img/page_header.jpg" />
 
-    <div class="ui inverted blue main menu" ui-visibility ui-visibility-data="vm.menuVisibility">
+    <div class="ui inverted blue main menu  computer show" ui-visibility ui-visibility-data="vm.menuVisibility">
       <div class="ui text container">
         <a href="#/practical-startpage" class="item" ng-class="{active:vm.isActive('/practical-startpage')}">Practical Startpage</a>
         <a href="#/ui-angular" class="item" ng-class="{active:vm.isActive('/ui-angular')}">UI Angular</a>
       </div>
     </div>
-    <div class="ui text container segment" ng-view>
+    <div class="ui text container segment mobile nomargin" ng-view>
 
     </div>
     <div class="ui inverted vertical footer segment">
