problems with locale on githu.io
renamed _locale to locale

--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -125,7 +125,7 @@
       <h3 class="ui header">General</h3>-->
 
     <div class="anchor" id="widgets"></div>
-    <h3 class="ui header">Widgets</h3>
+    <h3 class="ui header" ng-bind="vm.messages.Widgets">Widgets</h3>
     <div class="ui list">
       <div class="item" ng-repeat="item in vm.widgets">
         <i class="large icon" ng-class="item.icon"></i>
