--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -201,10 +201,33 @@
     <div class="anchor" id="languages"></div>
     <h3 class="ui header">Languages</h3>
     <p>Practical Startpage is available in the following Languages.</p>
+    
     <div class="ui relaxed list">
       <div class="item">
         <div class="content">
           <div class="header">English</div>
+        </div>
+      </div> 
+      <div class="item">
+        <div class="content">
+          <div class="header">Deutsch/German</div>
+          <div class="ui list">
+            <div class="item">
+              <img class="ui avatar image" src="/img/jeremy.clarke.jpg">
+              <div class="content">
+                <div class="header">Jeremy Clarke</div>
+              </div>
+              <div class="right floated content">
+                <a href="https://de.linkedin.com/in/jerryclarkep6" target="_blank">
+                  <div class="ui basic linkedin label">
+                    <span>Linked</span>
+                    <i class="large fitted linkedin square icon"></i>
+                    <span>profile</span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="item">
@@ -240,6 +263,7 @@
         </div>
       </div>
     </div>
+    
     <br>
     <div class="anchor" id="translate"></div>
     <h3 class="ui header">Translate</h3>
