--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
   <script src="dist/angular-socialshare.js"></script>
   <script src="dist/angulike.js"></script>
   <script src="dist/detect.min.js"></script>
+  
+  
+  <script src="distDev/social-angular/src/sa.app.js"></script>
+  <script src="distDev/social-angular/src/btns/facebook.js"></script>
 
 
   <script src="https://platform.twitter.com/widgets.js"></script>
