--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -203,11 +203,13 @@
     <p>Practical Startpage is available in the following Languages.</p>
     
     <div class="ui relaxed list">
+
       <div class="item">
         <div class="content">
-          <div class="header">English</div>
+          <div class="header">English(default)</div>
         </div>
-      </div> 
+      </div>
+
       <div class="item">
         <div class="content">
           <div class="header">Deutsch/German</div>
@@ -227,9 +229,24 @@
                 </a>
               </div>
             </div>
+            <div class="item">
+              <img class="ui avatar image" src="/img/robert.priebs.jpg">
+              <div class="content">
+                <div class="header">Robert Priebs</div>
+              </div>
+              <div class="right floated content">
+                <a href="https://www.xing.com/profile/Robert_Priebs3" target="_blank">
+                  <div class="ui basic xing label">
+                    <i class="large fitted xing square icon"></i>
+                    <span> Xing profile</span>
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+
       <div class="item">
         <div class="content">
           <div class="header">Español/Spanish</div>
@@ -257,11 +274,87 @@
           </div>
         </div>
       </div>
+
+      <div class="item">
+        <div class="content">
+          <div class="header">Français/French</div>
+          <div class="ui list">
+            <div class="item">
+              <img class="ui avatar image" src="/img/emma.songeur.jpg">
+              <div class="content">
+                <div class="header">Emma Songeur</div>
+              </div>
+              <div class="right floated content">
+                <a href="https://helloandbonjour.com/" target="_blank">
+                  <div class="ui blue label">
+                    <span>Hallo and Bonjour</span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="content">
+          <div class="header">Português(Brasil)/Portuguese(Brazil)</div>
+          <div class="ui list">
+            <div class="item">
+              <div class="content">
+                <div class="header">Rafael Ferreira</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="item">
         <div class="content">
           <div class="header">Svenska/Swedish</div>
+          <div class="ui list">
+            <div class="item">
+              <img class="ui avatar image" src="/img/paul.dhillon.jpg">
+              <div class="content">
+                <div class="header">Paul Dhillon</div>
+              </div>
+              <div class="right floated content">
+                <a href="https://www.linkedin.com/in/pauldhillon75" target="_blank">
+                  <div class="ui basic linkedin label">
+                    <span>Linked</span>
+                    <i class="large fitted linkedin square icon"></i>
+                    <span>profile</span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
+      <div class="item">
+        <div class="content">
+          <div class="header">Türkçe/Turkish</div>
+          <div class="ui list">
+            <div class="item">
+              <img class="ui avatar image" src="/img/cagdas.senis.jpg">
+              <div class="content">
+                <div class="header">Çağdaş Şeniş</div>
+              </div>
+              <div class="right floated content">
+                <a href="https://www.linkedin.com/in/csenis" target="_blank">
+                  <div class="ui basic linkedin label">
+                    <span>Linked</span>
+                    <i class="large fitted linkedin square icon"></i>
+                    <span>profile</span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     
     <br>
