removed survey from page

--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -29,7 +29,7 @@
   <h2 class="ui center aligned header" ng-bind="vm.messages.About">About</h2>
   <div ng-include="vm.getPromotional()">
   </div>
-  
+
   <div class="ui divider"></div>
 
   <div class="ui stackable equal width grid" ng-if="vm.checkBrowser('Chrome')">
@@ -201,7 +201,7 @@
     <div class="anchor" id="languages"></div>
     <h3 class="ui header">Languages</h3>
     <p>Practical Startpage is available in the following Languages.</p>
-    
+
     <div class="ui relaxed list">
 
       <div class="item">
@@ -356,7 +356,7 @@
       </div>
 
     </div>
-    
+
     <br>
     <div class="anchor" id="translate"></div>
     <h3 class="ui header">Translate</h3>
@@ -457,6 +457,14 @@
         <div class="content">
           <div class="description">
             HTML enhanced for web apps!
+          </div>
+        </div>
+      </a>
+      <a class="item" href="#/ui-angular/" target="_blank">
+        <img class="ui tiny image" src="img/ui-angular.png" />
+        <div class="content">
+          <div class="description">
+            KISS - semantic-ui/angularJS library
           </div>
         </div>
       </a>
