--- a/app/practical-startpage/practical-startpage.html
+++ b/app/practical-startpage/practical-startpage.html
@@ -10,17 +10,46 @@
 
   <div class="ui mini horizontal list">
 
-    <div class="fb-like item" data-href="https://chrome.google.com/webstore/detail/practical-startpage/ikjalccfdoghanieehppljppanjlmkcf" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+    <!--<div class="fb-like item" data-href="https://chrome.google.com/webstore/detail/practical-startpage/ikjalccfdoghanieehppljppanjlmkcf" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>-->
+
+    <a class="ui facebook label" socialshare socialshare-provider="facebook">
+      <i class="facebook f icon"></i> Facebook
+    </a>
+
+    <a class="ui xing label" socialshare socialshare-provider="xing">
+      <i class="xing icon"></i> Xing
+    </a>
+
+    <a class="ui basic label" socialshare socialshare-provider="email">
+      <i class="mail icon"></i> Mail
+    </a>
 
     <div tweet="vm.like.name" tweet-url="vm.like.url" class="item"></div>
+
+    <div google-plus="vm.like.url" class="item"></div>
 
     <div class="item">
       <div linkedin class="linkedinShare" data-url="{{vm.like.url}}" data-title="{{vm.like.name}}" data-summary="Practical Startpage is a simple yet powerful, allowing easy access to browser data, such as bookmarks and history." data-shares="linkedinshares">{{linkedinshares}}</div>
     </div>
 
-    <div google-plus="vm.like.url" class="item"></div>
+  </div>
+  <div class="ui fitted divider mobile show"> </div>
+  <div class="ui mini horizontal list mobile show">
+
+    <!--<a class="ui basic label" socialshare socialshare-provider="sms">
+      <i class="talk outline icon icon"></i> SMS
+    </a>-->
+
+    <a class="ui facebook label" socialshare socialshare-provider="facebook-messenger">
+      <i class="facebook f icon"></i> Facebook Messenger
+    </a>
+
+    <a class="ui whatsapp label" socialshare socialshare-provider="whatsapp">
+      <i class="whatsapp icon"></i> WhatsApp
+    </a>
 
   </div>
+
   <div class="ui fitted divider"></div>
 </div>
 <div class="anchor" id="about"></div>
