--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
   <script src="dist/ui-angular.min.js"></script>
   <script src="dist/angular-socialshare.js"></script>
+  <script src="dist/angular-socialshare.720kb.js"></script>
   <script src="dist/angulike.js"></script>
   <script src="dist/detect.min.js"></script>
 
